# cpp_test_tasks

./: .gitignore  README.md
lru/: CMakeLists.txt  about.txt  main.cpp
msg_handler/: CMakeLists.txt  about.txt  device_info.cpp  device_info.h  main.cpp  message.proto  poller.cpp  poller.h  protocol.cpp  protocol.h  test_client.py  transport.h  udp_transport.cpp  udp_transport.h
path_search/: Main.cpp  TestAppDelegate2.cpp  TestAppDelegate2.h  TestWidget2.cpp  TestWidget2.h  about.txt  sea.cpp  sea.h
varity/: lru.h
